[gd_scene load_steps=17 format=2]

[ext_resource path="res://assets/Atomosfer [TheFontsMaster.com].ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/main-menu.gd" type="Script" id=2]
[ext_resource path="res://assets/gameicons/PNG/Black/2x/multiplayer.png" type="Texture" id=3]
[ext_resource path="res://assets/gameicons/PNG/Black/2x/gear.png" type="Texture" id=4]
[ext_resource path="res://assets/gameicons/PNG/Black/2x/checkmark.png" type="Texture" id=5]
[ext_resource path="res://assets/gameicons/PNG/Black/2x/home.png" type="Texture" id=6]
[ext_resource path="res://images/rainbow-skin.png" type="Texture" id=7]
[ext_resource path="res://images/floral-skin.png" type="Texture" id=8]
[ext_resource path="res://images/striped-purple-skin.png" type="Texture" id=9]
[ext_resource path="res://images/red-skin.png" type="Texture" id=10]
[ext_resource path="res://images/cyan-skin.png" type="Texture" id=11]
[ext_resource path="res://images/yellow-skin.png" type="Texture" id=12]
[ext_resource path="res://images/orange-skin.png" type="Texture" id=13]
[ext_resource path="res://images/purple-skin.png" type="Texture" id=14]

[sub_resource type="DynamicFont" id=1]
size = 60
font_data = ExtResource( 1 )

[sub_resource type="StreamTexture" id=2]
flags = 4

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="home" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="Label" type="Label" parent="home"]
margin_left = 178.0
margin_top = 12.0
margin_right = 885.0
margin_bottom = 72.0
custom_fonts/font = SubResource( 1 )
text = "TRIPPING GIRLS & ENBIES"

[node name="Button" type="Button" parent="home"]
margin_left = 785.0
margin_top = 458.0
margin_right = 1062.0
margin_bottom = 564.0
text = "PLAY THE FUCKING GAME"
icon = ExtResource( 3 )

[node name="Button2" type="Button" parent="home"]
margin_left = 8.0
margin_top = 226.0
margin_right = 219.0
margin_bottom = 362.0
text = "SKINS"
icon = SubResource( 2 )

[node name="TextureButton" type="TextureButton" parent="home"]
margin_left = 980.0
margin_top = -9.0
margin_right = 1089.0
margin_bottom = 91.0
texture_normal = ExtResource( 4 )

[node name="skins" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="TextureButton" type="TextureButton" parent="skins"]
margin_top = 490.0
margin_right = 207.0
margin_bottom = 590.0
texture_normal = ExtResource( 6 )

[node name="VBoxContainer" type="VBoxContainer" parent="skins/TextureButton"]
margin_top = -489.0
margin_bottom = -578.0
custom_constants/separation = 14
__meta__ = {
"_edit_use_anchors_": true
}

[node name="HBoxContainer" type="HBoxContainer" parent="skins/TextureButton/VBoxContainer"]
margin_right = 616.0
margin_bottom = 120.0

[node name="TextureButton" type="TextureButton" parent="skins/TextureButton/VBoxContainer/HBoxContainer"]
margin_right = 120.0
margin_bottom = 120.0
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 5 )

[node name="TextureButton2" type="TextureButton" parent="skins/TextureButton/VBoxContainer/HBoxContainer"]
margin_left = 124.0
margin_right = 244.0
margin_bottom = 120.0
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 5 )

[node name="TextureButton3" type="TextureButton" parent="skins/TextureButton/VBoxContainer/HBoxContainer"]
margin_left = 248.0
margin_right = 368.0
margin_bottom = 120.0
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 5 )

[node name="HBoxContainer2" type="HBoxContainer" parent="skins/TextureButton/VBoxContainer"]
margin_top = 134.0
margin_right = 616.0
margin_bottom = 254.0

[node name="TextureButton" type="TextureButton" parent="skins/TextureButton/VBoxContainer/HBoxContainer2"]
margin_right = 120.0
margin_bottom = 120.0
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 5 )

[node name="TextureButton4" type="TextureButton" parent="skins/TextureButton/VBoxContainer/HBoxContainer2"]
margin_left = 124.0
margin_right = 244.0
margin_bottom = 120.0
texture_normal = ExtResource( 13 )
texture_pressed = ExtResource( 5 )

[node name="TextureButton3" type="TextureButton" parent="skins/TextureButton/VBoxContainer/HBoxContainer2"]
margin_left = 248.0
margin_right = 368.0
margin_bottom = 120.0
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 5 )

[node name="TextureButton2" type="TextureButton" parent="skins/TextureButton/VBoxContainer/HBoxContainer2"]
margin_left = 372.0
margin_right = 492.0
margin_bottom = 120.0
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 5 )

[node name="TextureButton5" type="TextureButton" parent="skins/TextureButton/VBoxContainer/HBoxContainer2"]
margin_left = 496.0
margin_right = 616.0
margin_bottom = 120.0
texture_normal = ExtResource( 14 )
texture_pressed = ExtResource( 5 )

[connection signal="pressed" from="home/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="home/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="skins/TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="skins/TextureButton/VBoxContainer/HBoxContainer/TextureButton" to="." method="_on_TextureButton_rainbow_pressed"]
[connection signal="pressed" from="skins/TextureButton/VBoxContainer/HBoxContainer/TextureButton2" to="." method="_on_TextureButton_floral_pressed"]
[connection signal="pressed" from="skins/TextureButton/VBoxContainer/HBoxContainer/TextureButton3" to="." method="_on_TextureButton_purple_striped_pressed"]
[connection signal="pressed" from="skins/TextureButton/VBoxContainer/HBoxContainer2/TextureButton" to="." method="_on_TextureButton_red_pressed"]
[connection signal="pressed" from="skins/TextureButton/VBoxContainer/HBoxContainer2/TextureButton4" to="." method="_on_TextureButton_orange_pressed"]
[connection signal="pressed" from="skins/TextureButton/VBoxContainer/HBoxContainer2/TextureButton3" to="." method="_on_TextureButton_yellow_pressed"]
[connection signal="pressed" from="skins/TextureButton/VBoxContainer/HBoxContainer2/TextureButton2" to="." method="_on_TextureButton_cyan_pressed"]
[connection signal="pressed" from="skins/TextureButton/VBoxContainer/HBoxContainer2/TextureButton5" to="." method="_on_TextureButton_purple_pressed"]
